More changed from Jan Petersen (hopefully I didn't miss anything) See the ChangeLog for more information.
* Move egg from gnome-utils to lib
* New "Tip of the day" dialog.
* Some small fixes.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8462 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -1069,6 +1069,7 @@ AC_OUTPUT( m4/Makefile
           doc/examples/Makefile
           intl-scm/Makefile
           lib/Makefile
+          lib/egg/Makefile
           lib/guile-www/Makefile
           lib/srfi/Makefile
 	  lib/libc/Makefile
@@ -1117,7 +1118,6 @@ AC_OUTPUT( m4/Makefile
 	  src/gnome/glade/Makefile
 	  src/gnome/ui/Makefile
           src/gnome-utils/Makefile
-          src/gnome-utils/egg/Makefile
 	  src/gnome-utils/test/Makefile
           src/gnome-search/Makefile
           src/import-export/Makefile
