--- a/src/gnome-utils/Makefile.am
+++ b/src/gnome-utils/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = egg . test
+SUBDIRS = . test
 
 pkglib_LTLIBRARIES = libgncmod-gnome-utils.la libgw-gnome-utils.la
 
@@ -8,7 +8,7 @@ AM_CFLAGS = \
   -I${top_srcdir}/src/backend/file \
   -I${top_srcdir}/src/network-utils \
   -I${top_srcdir}/src/app-utils \
-  -I${top_srcdir}/src/gnome-utils/egg \
+  -I${top_srcdir}/lib/egg \
   -I${top_srcdir}/src \
   ${GUILE_INCS} \
   ${LIBGUPPI_CFLAGS} \
@@ -104,7 +104,7 @@ libgncmod_gnome_utils_la_LIBADD = \
   ${top_builddir}/src/calculation/libgncmod-calculation.la \
   ${top_builddir}/src/network-utils/libgncmod-network-utils.la \
   ${top_builddir}/src/app-utils/libgncmod-app-utils.la \
-  ${top_builddir}/src/gnome-utils/egg/libegg.la \
+  ${top_builddir}/lib/egg/libegg.la \
   ${GUILE_LIBS} \
   ${LIBGUPPI_LIBS} \
   ${GNOMEUI_LIBS} \
