--- a/src/import-export/qif-import/Makefile.am
+++ b/src/import-export/qif-import/Makefile.am
@@ -53,7 +53,7 @@ AM_CFLAGS = \
   -I${top_srcdir}/src/app-file \
   -I${top_srcdir}/src/gnome \
   -I${top_srcdir}/src/gnome-utils \
-  -I${top_srcdir}/src/gnome-utils/egg \
+  -I${top_srcdir}/lib/egg \
   -DGNC_UI_DIR=\"$(GNC_UI_DIR)\"   \
   ${G_WRAP_COMPILE_ARGS} \
   ${GUILE_INCS} \
