* src/gnome-utils/gnc-date-format.*: Create a new "date format" 	  widget to let the user choose a date format (and see the results 	  of what the date would look like). 	* src/gnome-utils/Makedile.am: add gnc-date-format files to the build 	* src/gnome/dialog-print-check.c: use the new date-format widget 	* src/gnome/glade/print.glade: remove data that is now part of the 	  date-format widget.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8480 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome-utils/Makefile.am
+++ b/src/gnome-utils/Makefile.am
@@ -35,6 +35,7 @@ libgncmod_gnome_utils_la_SOURCES = \
   gnc-currency-edit.c \
   gnc-date-delta.c \
   gnc-date-edit.c \
+  gnc-date-format.c \
   gnc-dense-cal.c \
   gnc-frequency.c \
   gnc-general-select.c \
@@ -68,6 +69,7 @@ gncinclude_HEADERS = \
   gnc-currency-edit.h \
   gnc-date-delta.h \
   gnc-date-edit.h \
+  gnc-date-format.h \
   gnc-dense-cal.h \
   gnc-frequency.h \
   gnc-general-select.h \
@@ -124,6 +126,7 @@ gladedir = $(GNC_GLADE_DIR)
 glade_DATA = \
   commodity.glade \
   exchange-dialog.glade \
+  gnc-date-format.glade \
   transfer.glade
 
 EXTRA_DIST = \
