--- a/src/pixmaps/Makefile.am
+++ b/src/pixmaps/Makefile.am
@@ -1,8 +1,17 @@
 gncpixmapdir = ${GNC_PIXMAP_DIR}
 
 gncpixmap_DATA = \
+  account-16.png \
+  account.png \
+  appicon.png \
+  delete-account-16.png \
+  delete-account.png \
+  edit-account-16.png \
+  edit-account.png \
   gnucash-icon.png \
   gnucash_splash.png \
+  open-account-16.png \
+  open-account.png \
   stock_split_title.png \
   stock_split_watermark.png
 
