--- a/configure.in
+++ b/configure.in
@@ -1094,6 +1094,7 @@ AC_OUTPUT( m4/Makefile  intl/Makefile po/Makefile.in
           accounts/el_GR/Makefile
           accounts/es_ES/Makefile
           accounts/fr_FR/Makefile
+          accounts/it/Makefile
           accounts/pt_BR/Makefile
           accounts/pt_PT/Makefile
           accounts/sk/Makefile
