--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,14 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR(src/engine/Transaction.h)
+AC_PREREQ(2.53)
 
 AC_PROG_CC
 AC_PROG_INTLTOOL
+
+# Comment out for production or semi-production builds.  I.E. Anything
+# that is explicitly tagged in cvs as a version.
+AC_DEFINE(GNUCASH_CVS,1,[Define if built from untagged cvs])
 
 GNUCASH_MAJOR_VERSION=1
 GNUCASH_MINOR_VERSION=9
@@ -43,16 +48,20 @@ AC_SUBST(GNUCASH_MAJOR_VERSION)
 AC_SUBST(GNUCASH_MINOR_VERSION)
 AC_SUBST(GNUCASH_MICRO_VERSION)
 
-AC_DEFINE_UNQUOTED(GNUCASH_MAJOR_VERSION, $GNUCASH_MAJOR_VERSION)
-AC_DEFINE_UNQUOTED(GNUCASH_MINOR_VERSION, $GNUCASH_MINOR_VERSION)
-AC_DEFINE_UNQUOTED(GNUCASH_MICRO_VERSION, $GNUCASH_MICRO_VERSION)
+AC_DEFINE_UNQUOTED(GNUCASH_MAJOR_VERSION, $GNUCASH_MAJOR_VERSION,
+	[GnuCash Major version number])
+AC_DEFINE_UNQUOTED(GNUCASH_MINOR_VERSION, $GNUCASH_MINOR_VERSION,
+	[GnuCash Minor version number])
+AC_DEFINE_UNQUOTED(GNUCASH_MICRO_VERSION, $GNUCASH_MICRO_VERSION,
+	[GnuCash Micro version number])
 
 dnl Set of available languages.
-ALL_LINGUAS="da de el en_GB es es_NI fr hu it ja nb nl pl pt pt_BR ru sk sv uk zh_CN zh_TW"
+ALL_LINGUAS="da de el en_GB es es_NI fr hu it ja nb nl pl pt pt_BR ru sk sv ta uk zh_CN zh_TW"
 
 GETTEXT_PACKAGE=gnucash
 AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
+	[GetText version number])
                
 AM_GLIB_GNU_GETTEXT
 
@@ -68,6 +77,29 @@ AM_DISABLE_STATIC
 AM_PROG_LIBTOOL
 
 AC_SUBST(LIBTOOL_DEPS)
+
+# # checks for the pthreads library
+# have_pthread=no
+# for i in pthreads lthread pthread; do
+#   if test "x$have_pthread" = xno; then
+#     AC_CHECK_LIB($i, pthread_once, [
+#  	PTHREAD_LIBS=-l$i
+# 	have_pthread=yes
+# 	])
+#   fi
+# done
+# 
+# # Hmm, maybe it's just in libc?
+# if test "x$have_pthread" = xno; then
+#     AC_CHECK_FUNC(pthread_once, [ have_pthread=yes ])
+# fi
+# 
+# # Do we HAVE threads?!?
+# if test "x$have_pthread" = xno; then
+#   AC_MSG_ERROR([unable to find pthreads on your system.  Sorry.])
+# fi
+# 
+# AC_SUBST(PTHREAD_LIBS)
 
 AC_ISC_POSIX
 AC_C_BIGENDIAN
@@ -167,6 +199,13 @@ AM_GUILE_VERSION_CHECK(1.3.4, , , [AC_MSG_ERROR([
   1.3.4 to build.
 ])])
 
+AC_DEFINE_UNQUOTED(GNC_GUILE_MAJOR_VERSION, ${guile_major_version},
+	[Guile Major version number])
+AC_DEFINE_UNQUOTED(GNC_GUILE_MINOR_VERSION, ${guile_minor_version},
+	[Guile Minor version number])
+AC_DEFINE_UNQUOTED(GNC_GUILE_MICRO_VERSION, ${guile_micro_version},
+	[Guile Micro version number])
+
 AM_PATH_GWRAP(1.3.3, , , [AC_MSG_ERROR([
 
   g-wrap does not appear to be installed correctly, or is not new
@@ -192,7 +231,7 @@ G_WRAP_MODULE_DIR=`${G_WRAP_CONFIG} --guile-module-directory`
 G_WRAP_LIB_DIR=`echo $G_WRAP_MODULE_DIR | sed -e 's|share/guile|lib|'`
 AC_MSG_RESULT($G_WRAP_MODULE_DIR)
 
-AC_GWRAP_CHECK_GUILE
+AC_GWRAP_CHECK_GUILE($G_WRAP_MODULE_DIR)
 
 AC_SUBST(G_WRAP_CONFIG)
 AC_SUBST(G_WRAP_COMPILE_ARGS)
@@ -264,10 +303,13 @@ AC_SUBST(GNC_ADD_ON_SRFIS)
 if test "x${GNC_ADD_ON_SRFIS}" != "x"
 then
  GNC_SRFI_LOAD_PATH="\${top_srcdir}/lib/"
+ GNC_TEST_SRFI_LOAD_CMD="--guile-load-dir \${top_srcdir}/lib/"
 else
  GNC_SRFI_LOAD_PATH=""
+ GNC_TEST_SRFI_LOAD_CMD=""
 fi
 AC_SUBST(GNC_SRFI_LOAD_PATH)
+AC_SUBST(GNC_TEST_SRFI_LOAD_CMD)
 
 ### --------------------------------------------------------------------------
 ### See if we need guile-www
@@ -375,8 +417,8 @@ AC_ARG_ENABLE( debug,
   [  --enable-debug               compile with debugging flags set],
        CFLAGS="${CFLAGS} -g"
        LDFLAGS="${LDFLAGS} -g"
-       AC_DEFINE(DEBUG_MEMORY,1),
-       AC_DEFINE(DEBUG_MEMORY,0) )
+       AC_DEFINE(DEBUG_MEMORY,1,Enable debug memory),
+       AC_DEFINE(DEBUG_MEMORY,0,Enable debug memory) )
 
 AC_ARG_ENABLE( profile,
   [  --enable-profile             compile with profiling set],
@@ -408,6 +450,8 @@ AC_ARG_ENABLE( sql,
 	PGSQL_CFLAGS="-I${PGSQL_CFLAGS}"
       fi
 
+      AS_SCRUB_INCLUDE(PGSQL_CFLAGS)
+
       saved_CPPFLAGS="${CPPFLAGS}"
       CPPFLAGS="${CPPFLAGS} ${PGSQL_CFLAGS}"
       AC_CHECK_HEADERS(pgsql/libpq-fe.h postgresql/libpq-fe.h libpq-fe.h)
@@ -430,9 +474,9 @@ AC_ARG_ENABLE( sql,
               fi
           done
 	fi
-        
-	AS_SCRUB_INCLUDE(PGSQL_CFLAGS)
 
+	AS_SCRUB_INCLUDE(CFLAGS)
+        
         PGSQL_LIBS=`${PG_CONFIG} --libdir`
         if test "x$PGSQL_LIBS" != x; then
 	  PGSQL_LIBS="-L${PGSQL_LIBS}"
@@ -489,7 +533,9 @@ AC_SUBST(RPC_DIR)
 ### OFX
 AC_ARG_ENABLE( ofx,
   [  --enable-ofx                 compile with ofx support (needs LibOFX)],
-       OFX_DIR=ofx)
+  if test "x$enableval" != "xno" ; then
+    OFX_DIR=ofx
+  fi)
 if test x${OFX_DIR} = xofx ;
 then
     AC_ARG_WITH( ofx-prefix, 
@@ -502,6 +548,7 @@ then
     fi
 
     AC_MSG_CHECKING(for libofx/libofx.h)
+    AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
     save_CPPFLAGS="${CPPFLAGS}"
     CPPFLAGS="${CPPFLAGS} ${LIBOFX_CFLAGS}"
     AC_TRY_CPP( [#include <libofx/libofx.h>], AC_MSG_RESULT(yes), OFXfound=no )
@@ -509,6 +556,7 @@ then
     if test x${OFXPREFIX} = x -a x${OFXfound} = no ; then
     	LIBOFX_LIBS="-L$/usr/local/lib"
 	LIBOFX_CFLAGS="-I$/usr/local/include"
+        AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
         CPPFLAGS="${CPPFLAGS} ${LIBOFX_CFLAGS}"
 
         AC_TRY_CPP( [#include <libofx/libofx.h>], AC_MSG_RESULT([yes (in /usr/local)]),
@@ -533,7 +581,6 @@ int ofx_proc_statement_cb(const struct OfxStatementData data) { return 0; }
 
     LIBS="${save_LIBS}"
     CPPFLAGS="${save_CPPFLAGS}"
-    AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
     AC_SUBST(LIBOFX_CFLAGS)
     AC_SUBST(LIBOFX_LIBS)
 fi
@@ -543,12 +590,20 @@ AC_SUBST(OFX_DIR)
 ### HBCI
 AC_ARG_ENABLE( hbci,
   [  --enable-hbci                compile with HBCI support (needs OpenHBCI)],
-       HBCI_DIR=hbci)
+  if test "x$enableval" != "xno" ; then
+    HBCI_DIR=hbci
+  fi)
 if test x${HBCI_DIR} = xhbci ;
 then
-    AM_PATH_OPENHBCI(0.9.4)
+    AM_PATH_OPENHBCI(0.9.11)
     HBCI_LIBS="${OPENHBCI_LIBS}"
-    HBCI_CFLAGS="${OPENHBCI_CXXFLAGS}"
+    HBCI_CFLAGS="${OPENHBCI_CFLAGS}"
+
+    # also check for ktoblzcheck
+    AC_CHECK_HEADERS(ktoblzcheck.h)
+    if test "x$ac_cv_header_ktoblzcheck_h" != xno; then
+	HBCI_LIBS="${HBCI_LIBS} -lktoblzcheck"  
+    fi
 
     AS_SCRUB_INCLUDE(HBCI_CFLAGS)
     AC_SUBST(HBCI_LIBS)
@@ -705,7 +760,9 @@ LIBS="$LIBS -lm"
 DB_LIBS=
 AC_CHECK_LIB(db-3, __db185_open, DB_LIBS="-ldb-3",
   AC_CHECK_LIB(db-4.0, __db185_open, DB_LIBS="-ldb-4.0",
-    AC_MSG_ERROR([Your db library is missing db 1.85 compatibility mode])
+    AC_CHECK_LIB(db-4.1, __db185_open, DB_LIBS="-ldb-4.1",
+      AC_MSG_ERROR([Your db library is missing db 1.85 compatibility mode])
+    )
   )
 )
 
@@ -735,7 +792,7 @@ AC_CHECK_LIB(popt, poptStrippedArgv,, [AC_MSG_ERROR([
 ### --------------------------------------------------------------------------
 
 AC_ARG_ENABLE(gui, 
-  [  --enable-gui                  build the GNOME GUI components of Gnucash],
+  [  --diable-gui                  build without the GNOME GUI components of Gnucash],
   [case "${enableval}" in
      yes) gnc_build_gui=true ;;
      no)  gnc_build_gui=false ;;
@@ -796,7 +853,7 @@ then
       if test $enableval = yes; then
          EFENCE_LIBS="-lefence"
          USE_EFENCE=1
-	 AC_DEFINE(USE_EFENCE)
+	 AC_DEFINE(USE_EFENCE,,We are using EFence)
       fi,
       USE_EFENCE=0
       EFENCE_LIBS="")
@@ -821,7 +878,7 @@ then
     ## some point, if it's deemed worthwhile, they can be resurrected...
     
     GNOME=1
-    AC_DEFINE(GNOME)  
+    AC_DEFINE(GNOME,,using GNOME)
 else
   # GNOME_COMPILE_WARNINGS will add -Wall; no need to set it again.
   # also, only add it for GCC.
@@ -904,7 +961,7 @@ then
   # Enable error-on-warning by default -- I'm tired of fixing other
   # people's missing #includes, etc.
   AC_ARG_ENABLE(error-on-warning,
-    [  --enable-error-on-warning    treat compile warnings as errors],
+    [  --disable-error-on-warning    disable treating compile warnings as errors],
     [case "${enableval}" in
        yes) warnFLAGS="${warnFLAGS} -Werror" ;;
        no)  ;;
@@ -1012,11 +1069,14 @@ AC_OUTPUT( m4/Makefile
           src/import-export/binary-import/Makefile
           src/import-export/binary-import/test/Makefile
           src/import-export/qif-import/Makefile
+          src/import-export/qif/Makefile
+          src/import-export/qif/test/Makefile
           src/import-export/qif-import/test/Makefile
           src/import-export/qif-io-core/Makefile
           src/import-export/qif-io-core/test/Makefile
           src/import-export/ofx/Makefile
           src/import-export/ofx/test/Makefile
+          src/import-export/log-replay/Makefile
           src/import-export/hbci/Makefile
           src/import-export/hbci/glade/Makefile
           src/import-export/hbci/test/Makefile
