Fix sync breakage.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8903 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/engine/Makefile.am
+++ b/src/engine/Makefile.am
@@ -6,9 +6,7 @@ AM_CFLAGS = \
 	-I${top_srcdir}/lib/libc \
 	-I${top_srcdir}/src \
 	-I${top_srcdir}/src/gnc-module \
-	${GUILE_INCS} \
-	${G_WRAP_COMPILE_ARGS} \
-	${GLIB_CFLAGS}
+	${GNUCASH_ENGINE_CFLAGS}
 
 libgncmod_engine_la_SOURCES = \
   Account.c \
@@ -130,9 +128,7 @@ noinst_HEADERS = \
 noinst_SCRIPTS = iso-currencies-to-c
 
 libgncmod_engine_la_LDFLAGS = -module
-libgncmod_engine_la_LIBADD = \
- ${GUILE_LIBS} \
- ${GLIB_LIBS} \
+libgncmod_engine_la_LIBADD = ${GNUCASH_ENGINE_BASE_LIBS} \
  libgw-engine.la \
  libgw-kvp.la \
  ../gnc-module/libgncmodule.la \
