--- a/configure.in
+++ b/configure.in
@@ -928,6 +928,44 @@ int main ()
         ])
 fi
 
+### --------------------------------------------------------------------------
+### GnuCash flags and libs configuration
+
+GNUCASH_ENGINE_BASE_LIBS="${GLIB_LIBS}"
+GNUCASH_ENGINE_LIBS="-L${GNC_MODULE_DIR} -L${GNC_GWRAP_LIBDIR} ${GNUCASH_ENGINE_BASE_LIBS} ${GUILE_LIBS} -lgncmod-engine -lgw-engine -lgw-kvp -lgncmodule"
+
+GNUCASH_ENGINE_BASE_CFLAGS="-DGNUCASH ${GLIB_CFLAGS} ${G_WRAP_COMPILE_ARGS}"
+GNUCASH_ENGINE_CFLAGS="${GNUCASH_ENGINE_BASE_CFLAGS} ${GUILE_INCS}"
+
+AC_SUBST(GNUCASH_ENGINE_BASE_LIBS)
+AC_SUBST(GNUCASH_ENGINE_LIBS)
+AC_SUBST(GNUCASH_ENGINE_BASE_CFLAGS)
+AC_SUBST(GNUCASH_ENGINE_CFLAGS)
+
+GNUCASH_APP_UTILS_CFLAGS="${GNUCASH_ENGINE_CFLAGS}"
+GNUCASH_APP_UTILS_LIBS="${GNUCASH_ENGINE_LIBS} -lgncmod-calculation -lgncmod-app-utils"
+
+AC_SUBST(GNUCASH_APP_UTILS_CFLAGS)
+AC_SUBST(GNUCASH_APP_UTILS_LIBS)
+
+GNUCASH_NETWORK_UTILS_CFLAGS="${GLIB_CFLAGS} ${GHTTP_CFLAGS} ${GNOME_INCLUDEDIR}"
+GNUCASH_NETWORK_UTILS_LIBS="${GHTTP_LIBS} ${GNOME_LIBDIR} ${GNOME_LIBS} ${GNOMEUI_LIBS} -lgncmod-network-utils"
+
+AC_SUBST(GNUCASH_NETWORK_UTILS_CFLAGS)
+AC_SUBST(GNUCASH_NETWORK_UTILS_LIBS)
+
+GNUCASH_GNOME_UTILS_CFLAGS="${GNUCASH_APP_UTILS_CFLAGS} ${GNUCASH_NETWORK_UTILS_CFLAGS} ${GNOME_PRINT_CFLAGS} ${GNOME_INCLUDEDIR} ${GUPPI_CFLAGS} ${GDK_PIXBUF_CFLAGS}"
+GNUCASH_GNOME_UTILS_LIBS="${GNUCASH_APP_UTILS_LIBS} ${GNUCASH_NETWORK_UTILS_LIBS} ${GNOME_LIBDIR} ${GNOMEUI_LIBS} ${GNOME_PRINT_LIBS} ${GTKHTML_LIBS} ${GLADE_LIBS} ${GUPPI_LIBS} ${GDK_PIXBUF_LIBS} -lgncmod-gnome-utils"
+
+AC_SUBST(GNUCASH_GNOME_UTILS_CFLAGS)
+AC_SUBST(GNUCASH_GNOME_UTILS_LIBS)
+
+GNUCASH_REGISTER_CORE_CFLAGS="${GNUCASH_GNOME_UTILS_CFLAGS}"
+GNUCASH_REGISTER_CORE_LIBS="${GNUCASH_GNOME_UTILS_LIBS} -lgncmod-register-core"
+
+AC_SUBST(GNUCASH_REGISTER_CORE_CFLAGS)
+AC_SUBST(GNUCASH_REGISTER_CORE_LIBS)
+
 AM_CONDITIONAL(GNUCASH_SEPARATE_BUILDDIR, test "x${srcdir}" != "x.")
 AM_CONDITIONAL(GNC_FALSE, false)
 
