--- a/src/gnc-module/test/mod-bar/Makefile.am
+++ b/src/gnc-module/test/mod-bar/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS = \
   ${GUILE_INCS} \
   ${GLIB_CFLAGS}
 
+PWD := $(shell pwd)
 checklibdir=${PWD}
 checklib_LTLIBRARIES = libbar.la libgncmodbar.la
 
