First pass at converting to Gnome 2 HIG for button order.  Convert gnome1 dialogs to gtk2 dialogs. Set the function to activate the default button the gnome2 way (was editable_enters).  Remove some code not needed in gnome2 widget setup.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@9058 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome/glade/Makefile.am
+++ b/src/gnome/glade/Makefile.am
@@ -9,6 +9,7 @@ glade_DATA = \
 	price.glade \
 	print.glade \
 	progress.glade \
+	reconcile.glade \
 	register.glade \
 	stocks.glade \
 	tax.glade \
